--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.purchasing": "2.0.6",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "3.0.1",
